# lerobot-arx5

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
arx5_common/: pyproject.toml
arx5_common/arx5_common/: __init__.py  arm.py  config.py  data_utils.py  processor.py  processor_factory.py
lerobot_arx5/: __init__.py  arx5.py  config_arx5.py  model.py
lerobot_robot_arx5/: pyproject.toml
lerobot_robot_arx5/lerobot_robot_arx5/: __init__.py  arx5_follower.py  bi_arx5_follower.py  config_arx5_follower.py  config_bi_arx5_follower.py
lerobot_teleoperator_arx5/: pyproject.toml
lerobot_teleoperator_arx5/lerobot_teleoperator_arx5/: __init__.py  arx5_leader.py  bi_arx5_leader.py  config_arx5_leader.py  config_bi_arx5_leader.py
