[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_arx5"
version = "0.0.1"
description = "An ARX5 robot arm plugin for LeRobot"
readme = "README.md"
authors = [
  { name = "Ville Kuosmanen", email = "ville@villekuosmanen.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "arx5-sdk",
  "lerobot>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_arx5*"]
exclude = ["*.egg-info"]
