[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx5-common"
version = "0.1.1"
description = "Shared utilities for ARX5 robot arm LeRobot plugins"
authors = [
  { name = "Ville Kuosmanen", email = "ville@villekuosmanen.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
  "lerobot>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arx5_common*"]
