[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_teleoperator_arx5"
version = "0.1.0"
description = "ARX5 robot arm leader/teleoperator plugin for LeRobot"
readme = "../README.md"
authors = [
  { name = "Ville Kuosmanen", email = "ville@villekuosmanen.com" },
]
license = { file = "../LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "arx5-common",
  "lerobot>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lerobot_teleoperator_arx5*"]

